2013-01-30  ------ inet-2.1.0 released ------

2012-08-07  ------ inet-2.0.0 released ------

2012-08-04  Rudolf Hornig

	The "bitrate" parameter now has a default value: it is
	11Mbps for 802.11b, 27Mbps for 802.11p and 54Mbps for
	802.11g and 802.11a. (i.e. the default bitrate depends
	on the opMode parameter)

2012-08-02  Zoltan Bojthe

	Added new bitrate parameter to NIC. The Radio and MAC uses
	this parameter to set their own bitrate parameters.

2012-07-19  Zoltan Bojthe

	Bugfix for ieee80211:
	Packets in 'g' mode with 11Mbps or 12Mbps bitrates were
	using incorrect air time. Some calculations in 'b' mode
	was wrong too, because these sometimes also use table of
	'g' mode. Two values were swapped in the bitrate tables.

2012-06-29  Alfonso Ariza Quintana

	Implemented duplicate frame filtering in promiscuous mode.
	(Takeover from INETMANET)

	It is now possible to set the bitrate directly in PhyControlInfo
	so that the given frame will be transmitted with that bitrate
	independent of the MAC/Radio configuration.

2012-06-28  Zoltan Bojthe

	The convertToEther parameter morphed into encapDecap
	tri-state enum string parameter in access point management
	modules. Conversion of packets to/from higher layer depends:
	- "true": encapsulate/decapsulate
	- "false": no conversion
	- "eth": convert to/from EtherFrame

	Fixed issue where etherType was not set in Ieee802Ctrl
	when the management module decapsulated the message.

2012-06-25  ------ inet-1.99.5 released ------

2012-06-08  Rudolf Hornig

	Takover from INETMANET-2.0 @ 7fb431b (minor bugfixes)
	All files are synced. The following features were omitted:
	MULTIQUEUES, HWMP and MESH networking related code.

2012-03-20  ------ inet-1.99.4 released ------

2012-02-24  ------ inet-1.99.3 released ------

2012-02-11  Rudolf Hornig

	Takeover from INETMANET @ fff5dfd

	ChangeLog for the mac, radio and mgmt for further details.

2011-11-18  ------ INET-1.99.2 released ------

2011-09-14  Zoltan Bojthe
