@@ -1,35 +1,35 @@
 # workingdir,                        args,                                          simtimelimit,    fingerprint
-/examples/manetrouting/fg80211/ini/, -f Mob_DSR_omnetpp.ini -c General -r 0,        100s,            9c55-5f0a
-/examples/manetrouting/fg80211/,     -f omnetpp.ini -c General -r 0,                100s,            feec-3b86
-/examples/manetrouting/fg80211/,     -f omnetpp.ini -c DYMOUM -r 0,                 100s,            096e-70bc
-/examples/manetrouting/fg80211/,     -f omnetpp.ini -c DYMO -r 0,                   100s,            fea4-ea12
-/examples/manetrouting/fg80211/,     -f omnetpp.ini -c DSRUU -r 0,                  100s,            2230-d7ab
-/examples/manetrouting/fg80211/,     -f omnetpp.ini -c OLSR -r 0,                   20s,             0ee9-a9db
-/examples/manetrouting/fg80211/,     -f omnetpp.ini -c DSDV_2 -r 0,                 10s,             828c-2636
-/examples/manetrouting/fg80211/,     -f omnetpp.ini -c Batman -r 0,                 10s,             075e-2b27
-/examples/manetrouting/grid_aodv/,   -f omnetpp.ini -c General -r 0,                10s,             f1de-f936
-/examples/manetrouting/grid_aodv/,   -f omnetpp.ini -c DYMO -r 0,                   10s,             a72b-b837
-/examples/manetrouting/grid_aodv/,   -f omnetpp.ini -c DYMOUM -r 0,                 10s,             e858-f1e7
+/examples/manetrouting/fg80211/ini/, -f Mob_DSR_omnetpp.ini -c General -r 0,        100s,            de11-2a47
+/examples/manetrouting/fg80211/,     -f omnetpp.ini -c General -r 0,                100s,            c78c-f14e
+/examples/manetrouting/fg80211/,     -f omnetpp.ini -c DYMOUM -r 0,                 100s,            9889-24d1
+/examples/manetrouting/fg80211/,     -f omnetpp.ini -c DYMO -r 0,                   100s,            2ada-0e90
+/examples/manetrouting/fg80211/,     -f omnetpp.ini -c DSRUU -r 0,                  100s,            361b-d179
+/examples/manetrouting/fg80211/,     -f omnetpp.ini -c OLSR -r 0,                   20s,             6506-400c
+/examples/manetrouting/fg80211/,     -f omnetpp.ini -c DSDV_2 -r 0,                 10s,             33e6-ebf5
+/examples/manetrouting/fg80211/,     -f omnetpp.ini -c Batman -r 0,                 10s,             5214-157f
+/examples/manetrouting/grid_aodv/,   -f omnetpp.ini -c General -r 0,                10s,             c24e-d689
+/examples/manetrouting/grid_aodv/,   -f omnetpp.ini -c DYMO -r 0,                   10s,             2378-bae6
+/examples/manetrouting/grid_aodv/,   -f omnetpp.ini -c DYMOUM -r 0,                 10s,             d3d5-4449
 # /examples/manetrouting/grid_aodv/,   -f omnetpp.ini -c AODVUU -r 0,                 10s,             6a17-abf7    #unstable fingerprint
-/examples/manetrouting/grid_aodv/,   -f omnetpp.ini -c DSRUU -r 0,                  10s,             9a45-7c5f
-/examples/manetrouting/grid_aodv/,   -f omnetpp.ini -c OLSR -r 0,                   10s,             cd27-cefc
-/examples/manetrouting/grid_aodv/,   -f omnetpp.ini -c DSDV_2 -r 0,                 5s,              7840-1e44
-/examples/manetrouting/grid_aodv/,   -f omnetpp.ini -c Batman -r 0,                 10s,             08f5-ef77
+/examples/manetrouting/grid_aodv/,   -f omnetpp.ini -c DSRUU -r 0,                  10s,             10aa-d3db
+/examples/manetrouting/grid_aodv/,   -f omnetpp.ini -c OLSR -r 0,                   10s,             3877-e374
+/examples/manetrouting/grid_aodv/,   -f omnetpp.ini -c DSDV_2 -r 0,                 5s,              da08-f653
+/examples/manetrouting/grid_aodv/,   -f omnetpp.ini -c Batman -r 0,                 10s,             3f7f-7dfa
 /examples/manetrouting/hna/,         -f omnetpp.ini -c single_radio -r 0,           100s,            d135-6bc5
 /examples/manetrouting/hna/,         -f omnetpp.ini -c multi_radio -r 0,            100s,            488a-a3c3
 /examples/manetrouting/manetMultiradio/, -f 3_nodes.ini -c MultiRadio -r 0,             100s,            ac62-a79b
-/examples/manetrouting/net80211_aodv/, -f omnetpp.ini -c DYMOUM -r 0,                 100s,            d0ae-4e78
-/examples/manetrouting/net80211_aodv/, -f omnetpp.ini -c DYMO -r 0,                   100s,            2620-9264
+/examples/manetrouting/net80211_aodv/, -f omnetpp.ini -c DYMOUM -r 0,                 100s,            060a-eab5
+/examples/manetrouting/net80211_aodv/, -f omnetpp.ini -c DYMO -r 0,                   100s,            5a5d-0a63
 # /examples/manetrouting/net80211_aodv/, -f omnetpp.ini -c AODVUU -r 0,                 100s,            9d02-6e8d  # unstable fingerprint
-/examples/manetrouting/net80211_aodv/, -f omnetpp.ini -c DSRUU -r 0,                  100s,            8eeb-6fef
-/examples/manetrouting/net80211_aodv/, -f omnetpp.ini -c OLSR -r 0,                   5s,              9ca4-d42a
-/examples/manetrouting/net80211_aodv/, -f omnetpp.ini -c DSDV_2 -r 0,                 5s,              928e-0e0d
-/examples/manetrouting/net80211_aodv/, -f omnetpp.ini -c Batman -r 0,                 2s,              cfdc-2b55
-/examples/manetrouting/net80211_control/, -f omnetpp.ini -c General -r 0,                10s,             5473-0c51
+/examples/manetrouting/net80211_aodv/, -f omnetpp.ini -c DSRUU -r 0,                  100s,            2896-620e
+/examples/manetrouting/net80211_aodv/, -f omnetpp.ini -c OLSR -r 0,                   5s,              eb0c-b66c
+/examples/manetrouting/net80211_aodv/, -f omnetpp.ini -c DSDV_2 -r 0,                 5s,              b084-7b0f
+/examples/manetrouting/net80211_aodv/, -f omnetpp.ini -c Batman -r 0,                 2s,              e057-4b93
+/examples/manetrouting/net80211_control/, -f omnetpp.ini -c General -r 0,                10s,             1206-9694
 /examples/manetrouting/net80211_control/, -f omnetpp.ini -c DYMOUM -r 0,                 10s,             cc40-ad7f
 /examples/manetrouting/net80211_control/, -f omnetpp.ini -c AODVUU -r 0,                 10s,             459f-20e8
 /examples/manetrouting/net80211_control/, -f omnetpp.ini -c DSRUU -r 0,                  10s,             cc40-ad7f
-/examples/manetrouting/net80211_control/, -f omnetpp.ini -c OLSR -r 0,                   10s,             5473-0c51
-/examples/manetrouting/net80211_control/, -f omnetpp.ini -c DSDV_2 -r 0,                 3s,              7ae3-e40b
+/examples/manetrouting/net80211_control/, -f omnetpp.ini -c OLSR -r 0,                   10s,             1206-9694
+/examples/manetrouting/net80211_control/, -f omnetpp.ini -c DSDV_2 -r 0,                 3s,              1ef6-49ff
 /examples/manetrouting/net80211_control/, -f omnetpp.ini -c DYMO -r 0,                   10s,             cc40-ad7f
-/examples/manetrouting/net80211_control/, -f omnetpp.ini -c Batman -r 0,                 10s,             4476-40f9
+/examples/manetrouting/net80211_control/, -f omnetpp.ini -c Batman -r 0,                 10s,             dba5-148b
